@@ -10,8 +10,7 @@ brltty-udeb
 # net installation support
 net-retriever
 download-installer
-netcfg-static
-netcfg-dhcp
+netcfg
 choose-mirror
 kbd-chooser
 hw-detect
