@@ -3,7 +3,7 @@
 #nic-pcmcia-modules-${kernel:Version}
 nic-extra-modules-${kernel:Version}
 #irda-modules-${kernel:Version}
+scsi-common-modules-${kernel:Version}
 scsi-modules-${kernel:Version}
 cdrom-core-modules-${kernel:Version}
 cdrom-modules-${kernel:Version}
-
