@@ -21,6 +21,5 @@ firewire-core-modules-${kernel:Version}
 usb-storage-modules-${kernel:Version}
 # USB and firewire cdroms both need this.
 scsi-core-modules-${kernel:Version}
-# Support for SCSI cdroms.
-# (Doesn't currently fit, and cd_drivers will do.)
-#scsi-modules-${kernel:Version}
+# Support for SCSI cdroms on common controllers.
+scsi-common-modules-${kernel:Version}
