@@ -12,6 +12,7 @@ kbd-chooser
 ide-core-modules-${kernel:Version}
 ide-modules-${kernel:Version}
 scsi-core-modules-${kernel:Version}
+scsi-common-modules-${kernel:Version}
 scsi-modules-${kernel:Version}
 scsi-extra-modules-${kernel:Version}
 usb-modules-${kernel:Version}
