@@ -36,8 +36,7 @@ mkreiserfs-udeb
 modutils-basic
 modutils-full
 net-retriever
-netcfg-dhcp
-netcfg-static
+netcfg
 partconf
 partconf-find-partitions
 partconf-mkfstab
