@@ -2,4 +2,3 @@ cdebconf-text-udeb
 console-keymaps-at
 kbd-chooser
 dhcp-client-udeb
-netcfg-dhcp
