@@ -12,4 +12,3 @@ usb-discover
 hw-detect
 ethdetect
 dhcp-client-udeb
-netcfg-dhcp
