@@ -15,7 +15,6 @@ nic-modules-${kernel:Version}
 #input-modules-${kernel:Version}
 hw-detect
 ethdetect
-netcfg-dhcp
 floppy-retriever
 #pcmcia-cs-udeb
 #floppy-modules-${kernel:Version}
