@@ -1,5 +1,4 @@
 console-keymaps-usb
 console-keymaps-sun
 kbd-chooser
-netcfg-dhcp
 dhcp-client-udeb
