@@ -14,6 +14,14 @@ debian-installer (20031213) UNRELEASED; urgency=low
       was there, but its deps were not met and this could cause ugly messages 
       during install.
     - Remove the same ide modules from i386 netboot.
+    - Document the bootkbd boot parameter in syslinux f7.txt.
+    - Add "expert" mode boot to syslinux, which sets DEBCONF_PRIORITY=low.
+    - Include a doc/index.en.html in the install-images tarball, so
+      debian-cd will find some documentation and not include the boot floppies
+      docs.
+    - Include INSTALLATION-HOWTO there too, by way of a gross, gross hack.
+    - netcfg reorg
+    - scsi-common-modules reorg
   * Thiemo Seufer
     - Build the demo tree only for architectures which support it.
     - Don't build images for the demo target.
